# fastaistyle

./: CHANGELOG.md  README.md  chkstyle.py  pyproject.toml  style.md
.github/workflows/: release.yml
chkstyle/: __init__.py  core.py
tests/: test_chkstyle.py
