[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastaistyle"
dynamic = ["version"]
description = "Style checker for fast.ai coding conventions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Jeremy Howard", email = "j@fast.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
chkstyle = "chkstyle:cli"

[project.urls]
Homepage = "https://github.com/AnswerDotAI/fastaistyle"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["chkstyle.py"]

[tool.hatch.version]
path = "chkstyle.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
